--- a/css/memoir.css
+++ b/css/memoir.css
@@ -1,48 +1,15 @@
-.box h3 {
-	text-align: center;
-	position: relative;
-	top: 80px;
+/* * {
+	border: 1px solid red !important;
+}
+ */
+.page-height {
+	height: 100%;
 }
 
-.box {
-	width: 70%;
-	height: 200px;
-	background: #fff;
-	margin: 40px auto;
+.center-child-divs {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
-/* offset-x | offset-y | blur-radius | spread-radius | color */
-.effect1 {
-	box-shadow: 0 10px 10px 0px #777;
-}
 
-.test {
-	border-color: #009933;
-	border-style: solid;
-	border-width: 0 0.3em 0.25em 0;
-	transform: rotate(45deg);
-}
-
-.effect2 {
-	position: relative;
-}
-
-.effect2:before, .effect2:after {
-	z-index: -1;
-	position: absolute;
-	content: "";
-	bottom: 15px;
-	left: 10px;
-	width: 50%;
-	top: 80%;
-	max-width: 300px;
-	background: #777;
-	transform: rotate(-3deg);
-	box-shadow: 0 15px 10px #777;
-}
-
-.effect2:after {
-	transform: rotate(3deg);
-	right: 10px;
-	left: auto;
-}
