--- a/css/memoir.css
+++ b/css/memoir.css
@@ -12,4 +12,11 @@
 	align-items: center;
 }
 
+.open-sans {
+	font-family: 'Open Sans Condensed', sans-serif;
+	font-weight: 700;
+}
 
+.ginormous {
+	font-size: 36rem;
+}
