added opacity to raised-corner before and after pseudo-classes

--- a/css/memoir.css
+++ b/css/memoir.css
@@ -73,6 +73,7 @@ drop shadow to work, as the shadow's height is a pct of parent's height */
 	background: #777;
 	transform: rotate(-5deg);
 	box-shadow: 0 15px 10px #777;
+	opacity: 0;
 }
 
 .raised-corner:after {
